adding updated files

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 	<p>WEHO, Let's Go is a blog by foodies, for foodies who are interested in exploring new tastes in West Hollywood <a href="#">Read more</a></p>
 	
 </div>
-	
+	<div class="footer">
+  <p>Stuff</p>
+</div>
 
 </body>
 </html>
