updated buttons and fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>WEHO, Let's Go!</title>
-<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans|Work+Sans" rel="stylesheet">
 <link href="style.css" rel="stylesheet" />
 
 </head>
